# intel_7_openCV_mini_project_Remote_Band

./: README.md
QT_Server/: idpasswd.txt  mainwidget.cpp  mainwidget.h  mixerwidget.cpp  mixerwidget.h  serverwidget.cpp  serverwidget.h
band/: band.pro  mainwidget.cpp  mainwidget.h  mainwidget.ui  serverwidget.cpp  serverwidget.h  tab1socketserver.cpp  tab1socketserver.h  tab1socketserver.ui  wav.qrc
drum/openCV_project_Drum/: drum  drum.cpp  drum.py  drum2.cpp  drum3.cpp  drum4.cpp  drum5  drum5.cpp
drum/openCV_project_Drum/drum_no_server_test/: Makefile  drum_no_server_test
drum/openCV_project_Drum/drum_server_socket/: Makefile
guita/: CMakeLists.txt  build.sh  main.cpp
piano/VirtualPiano/: CMakeLists.txt  README.md  build.sh  create_piano_sounds.py  test_window  test_window.cpp
piano/VirtualPiano/src/: AudioManager.cpp  AudioManager.h  HandDetector.cpp  HandDetector.h  OpenCVPiano.cpp  OpenCVPiano.h  Piano.cpp  Piano.h  main.cpp
